<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/semi_creamy"
    android:orientation="vertical">


    <androidx.cardview.widget.CardView
        android:id="@+id/card_language"
        android:layout_margin="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="20dp"
        >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp">

            <ImageView
                android:id="@+id/iv_translate"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_centerInParent="true"
                android:layout_alignParentStart="true"
                android:layout_gravity="center"
                android:contentDescription="@string/translate"
                android:src="@drawable/ic_baseline_translate_24" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:layout_gravity="center"
                android:layout_centerInParent="true"
                android:layout_toEndOf="@id/iv_translate"
                android:fontFamily="@font/quicksand_bold"
                android:text="@string/change_lang" />
        </RelativeLayout>


    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_margin="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="20dp"
        >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp">

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/switch_reminder"
                android:layout_centerInParent="true"
                android:layout_alignParentStart="true"
                android:layout_marginEnd="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_gravity="center"
                android:layout_centerInParent="true"
                android:layout_toEndOf="@id/switch_reminder"
                android:fontFamily="@font/quicksand_bold"
                android:text="@string/reminder_every_9am" />
        </RelativeLayout>


    </androidx.cardview.widget.CardView>

</LinearLayout>