<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/src"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:background="#ACF8FF"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_homie"
                android:contentDescription="@string/potop"
                android:tag="parallax=0.3" />

            <ImageButton
                android:id="@+id/btn_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:contentDescription="@string/back_btn"
                android:layout_alignParentTop="true"
                android:layout_margin="20dp"
                android:backgroundTint="@android:color/transparent"
                android:src="@drawable/ic_btn_back" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1060dp"
                android:layout_below="@id/src"
                android:layout_marginTop="-20dp"
                android:background="@drawable/oval_item_top_30"
                android:backgroundTint="@color/white"
                android:gravity="center"
                android:tag="parallax=0.5"
                android:text="@string/my_awesome_title" />

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/pict"
                android:layout_width="126dp"
                android:layout_height="126dp"
                android:layout_below="@id/src"
                android:layout_centerInParent="true"
                android:contentDescription="@string/profile_pic"
                android:layout_marginTop="-60dp"
                android:src="@drawable/loading_plc" />

            <TextView
                android:id="@+id/tv_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/pict"
                android:fontFamily="@font/quicksand_bold"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="20sp"
                tools:text="Nama User Disini" />

            <TextView
                android:id="@+id/tv_repo_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_username"
                android:layout_centerInParent="true"
                android:layout_marginTop="10dp"
                android:drawablePadding="10dp"
                android:fontFamily="@font/quicksand_regular"
                android:textAlignment="center"
                app:drawableStartCompat="@drawable/ic_programming"
                tools:text="Repository Count : " />

            <TextView
                android:id="@+id/tv_about_me"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_repo_count"
                android:layout_centerInParent="true"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:drawablePadding="10dp"
                android:fontFamily="@font/quicksand_regular"
                android:textAlignment="center"
                android:textColor="@color/black"
                app:drawableStartCompat="@drawable/ic_information"
                tools:text="Tentang Saya : " />

            <LinearLayout
                android:id="@+id/container_info_follow"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_about_me"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="30dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="30dp"
                android:background="@drawable/oval_item_30"
                android:backgroundTint="#a9f1df"
                android:padding="15dp">

                <TextView
                    android:id="@+id/tv_following"
                    style="@style/TextCommon"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:drawablePadding="10dp"
                    tools:text="Following"
                    app:drawableStartCompat="@drawable/ic_followers" />

                <TextView
                    android:id="@+id/tv_followers"
                    style="@style/TextCommon"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:drawablePadding="10dp"
                    tools:text="Followers"
                    app:drawableStartCompat="@drawable/ic_followers" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/container_info_me"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/container_info_follow"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="30dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="30dp"
                android:background="@drawable/oval_item_30"
                android:backgroundTint="#f5cebe"
                android:padding="15dp">

                <TextView
                    android:id="@+id/tv_company"
                    style="@style/TextCommon"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:drawablePadding="10dp"
                    app:drawableStartCompat="@drawable/ic_employee"
                    tools:text="Kantor" />

                <TextView
                    android:id="@+id/tv_location"
                    style="@style/TextCommon"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:drawablePadding="10dp"
                    app:drawableStartCompat="@drawable/ic_baseline_location_on_24"
                    tools:text="Lokasi" />
            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/container_info_me">

                <com.google.android.material.bottomnavigation.BottomNavigationView
                    android:id="@+id/nav_follow"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="0dp"
                    android:layout_marginEnd="0dp"
                    android:background="?android:attr/windowBackground"
                    app:menu="@menu/bottom_detail_menu" />

                <FrameLayout
                    android:id="@+id/nav_host_fragment"
                    android:name="androidx.navigation.fragment.NavHostFragment"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/nav_follow"
                    android:layout_alignParentBottom="true" />
            </RelativeLayout>


        </RelativeLayout>


    </ScrollView>

    <include
        android:id="@+id/inc_loading"
        android:visibility="gone"
        layout="@layout/loading"/>
    <include
        android:id="@+id/inc_error"
        android:visibility="gone"
        layout="@layout/error"/>

</RelativeLayout>
